kubernetes/code-server-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress-static
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /static/$2
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - code-server.azure.megah3rtz.net
    secretName: tls-secret
  rules: code-server.azure.megah3rtz.net
  - host: 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: code-server
            port: 
              number: 80
